# simple-protobuf-esp-idf

./: idf_component.yml
include/spb/: bits.h  json.hpp  pb.hpp  utf8.h
include/spb/io/: io.hpp
include/spb/json/: base64.h  deserialize.hpp  serialize.hpp
include/spb/pb/: deserialize.hpp  serialize.hpp
src/: CMakeLists.txt
src/private_include/: esp_err.h
src/spb-proto-compiler/: main.cpp
src/spb-proto-compiler/dumper/: header.cpp
src/spb-proto-compiler/dumper/json/: dumper.cpp  template-h.h
src/spb-proto-compiler/dumper/pb/: dumper.cpp  template-h.h
test/: pb.cpp
